<resources>
    <string name="app_name">Mine Log</string>
    <string name="equipment_name">Equipment</string>
    <string name="activity_list">Activity List</string>
    <string name="add_eq">Add New Equipment</string>
    <string name="add_shift">Add New Shift</string>
    <string name="add_eq_name">Equipment Name</string>
    <string name="edit_eq">Edit Equipment Name</string>
    <string name="name">Name</string>
    <string name="edit_eq_shift">Edit Shift Name</string>
    <string name="new_eq">Enter Equipment Name</string>
    <string name="type">Type</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_new_shift">You will now create a new shift. Press OK to enter Activity Panel.</string>
    <string name="ok">Ok</string>
    <string name="add_activity">Add New Activity</string>
    <string-array name="actype_array">
        <item>Production</item>
        <item>Downtime</item>
        <item>Standby</item>
        <item>Maintenance</item>
    </string-array>
    <string-array name="eqtype_array">
        <item>Shovel</item>
        <item>Truck</item>
        <item>Others</item>
    </string-array>
    <string name="add_ac_name">Add New Activity</string>
    <string name="title_activity_login">Mine Log</string>
    <string-array name="acctype_array">
        <item>engineer</item>
        <item>operator</item>
    </string-array>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Username must have at least 4 characters</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_email_not_in_db">Username not found</string>
    <string name="enter_password">Enter Account Password</string>
    <string name="prompt_password_edit">Enter Valid Password</string>
    <string name="create_acc">Create Account</string>
    <string name="set_admin_pass">mining123</string>
    <string name="create_acc_hint">Account Name</string>
    <string name="create_pass_hint">Account Password</string>
    <string name="create_pass_hint_rep">Confirm Password</string>
    <string name="admin_pass_hint">Enter Admin Password</string>
    <string name="assign_operator">Assign Operator to this Shift</string>
</resources>
