<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:text="@string/create_acc"
        android:textSize="42sp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/acc_name"
        android:digits="ABCDEFHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/create_acc_hint" />

    <EditText
        android:id="@+id/acc_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint= "@string/create_pass_hint"/>
    <EditText
        android:id="@+id/acc_pass_rep"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint= "@string/create_pass_hint_rep"/>
    <Spinner
        android:id="@+id/acc_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="#FFFFBB33"
        android:textSize="12sp"
        android:text="@string/admin_pass_hint"
        android:id="@+id/admin_prompt" />

    <EditText
        android:id="@+id/admin_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint= "@string/admin_pass_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_acc_ok"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_acc_cancel"
        />
</LinearLayout>