<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:text="@string/add_shift"
        android:textSize="40sp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_operator"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:id="@+id/operator_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_ok_shift"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_cancel_shift"
        />
</LinearLayout>