<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:text="@string/add_eq_name"
        android:textSize="40sp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/new_eq_name"
        android:digits="ABCDEFHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/name" />

    <Spinner
        android:id="@+id/neq_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_ok"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="bottom"
        android:id="@+id/dialog_cancel"
        />
</LinearLayout>